--- a/src/app/landing/components/carousel/carousel.component.html
+++ b/src/app/landing/components/carousel/carousel.component.html
@@ -1,1 +1,29 @@
-<p>carousel works!</p>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/recursos/promocion1.jpg" class="d-block w-100" alt="..." id="promos" />
+      </div>
+      <div class="carousel-item">
+        <img src="assets/recursos/promocion2.jpg" class="d-block w-100" alt="..." id="promos" />
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleCaptions"
+      role="button"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleCaptions"
+      role="button"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
+  </div>
+  
