feat: agregar auth
se agregó componente de register y login sin funcionalidades

--- a/src/app/admin/components/sidebar/sidebar.component.html
+++ b/src/app/admin/components/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
-
-
 <nav class="sidebar">
-  <div class="sidebar-header">Panel Administrativo</div>
+  <div class="sidebar-header">
+    <h2>Panel Administrativo</h2>
+  </div>
   <ul class="sidebar-menu">
-    <li><a href="#">Usuarios</a></li>
-    <li><a href="#">Empleados</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li><a href="#">Productos</a></li>
-    <li><a href="#">Pedidos</a></li>
-    <li><a href="#">Recetas</a></li>
-    <li><a href="#">Ventas</a></li>
+    <li><a href="admin/usuarios"><i class="fas fa-users"></i> Usuarios</a></li>
+    <li><a href="admin/empleados"><i class="fas fa-user-tie"></i> Empleados</a></li>
+    <li><a href="admin/clientes"><i class="fas fa-users"></i> Clientes</a></li>
+    <li><a href="admin/productos"><i class="fas fa-cogs"></i> Productos</a></li>
+    <li><a href="admin/pedidos"><i class="fas fa-box"></i> Pedidos</a></li>
+    <li><a href="admin/recetas"><i class="fas fa-book"></i> Recetas</a></li>
+    <li><a href="admin/ventas"><i class="fas fa-chart-line"></i> Ventas</a></li>
   </ul>
 </nav>
