--- a/src/app/admin/pages/admin-panel/admin-panel.component.html
+++ b/src/app/admin/pages/admin-panel/admin-panel.component.html
@@ -1,2 +1,12 @@
-<app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
+<div class="admin-layout">
+    <!-- Sidebar fijo a la izquierda -->
+    <app-sidebar></app-sidebar>
+  
+    <!-- Contenido principal con la tabla -->
+    <div class="admin-content">
+      <app-tabla></app-tabla>
+    </div>
+  </div>
+  
+  <router-outlet></router-outlet>
+  
