--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,9 @@
 <div class="main-content">
-    <app-formulario></app-formulario>
-    <router-outlet></router-outlet>
-  </div>
+  <app-formulario
   
+  [accion]="'Iniciar sesion'"
+  >
+    
+  </app-formulario>
+  <router-outlet></router-outlet>
+</div>
