--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,10 @@
-<p>register works!</p>
+<div class="main-content">
+    <app-formulario
+    
+    [accion]="'Registrarse'"
+    >
+      
+    </app-formulario>
+    <router-outlet></router-outlet>
+  </div>
+  
